# rust-hik

./: Cargo.toml  README.md  build.rs  wrapper.h
headers/: CameraParams.h  MvCameraControl.h  MvSdkExport.h
src/: lib.rs  wrapper.h
