[package]
name = "rust-hik"
authors = ["spartajet"]
version = "0.0.1"
edition = "2021"
description = "Rust bindings for Hikvision SDK V4.3.1"
license = "MIT"
repository = "https://github.com/spartajet/rust-hik.git"
readme = "README.md"
keywords = ["hikvision", "sdk", "bindings", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
